--- a/src/pages/Admin/Admin.css
+++ b/src/pages/Admin/Admin.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #1d2634;
+    background-color: #f8f8f8;
     color: #9e9ea4;
     font-family: 'Montserrat', sans-serif;
   }
@@ -126,6 +126,7 @@ body {
   .main-title {
     display: flex;
     justify-content: space-between;
+    color: #000000;
   }
   
   .main-cards {
