styling for admin panel

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,9 @@
 
 /* ============= NavLink active Start here ============== */
 nav .active li {
-  color: black;
+  color: white;
   font-weight: 600;
-  text-decoration: 1px underline black;
+  text-decoration: 1px underline white;
 }
 
 @media screen and (max-width: 665px) {
